Přidána ještě poznámka o zobrazování videa.

--- a/content/sluzby/index.html
+++ b/content/sluzby/index.html
@@ -35,5 +35,7 @@
  	<p>Tady je to stejné video jako z bodu (3), ale vložené s pomocí tagu "object":<p>
  		<object data="http://www.youtube.com/embed/W7qWa52k-nE"
    width="560" height="315"></object>
+   <h3>Upozornění: pokud se vám video youtube nezobrazuje, není problém v kódu, ale v zabezpečení na straně vašeho prohlížeče. Např. v Internet Exploreru se
+   musí kliknout na "Zobrazit celý obsah"</h3>
 </body>
 </html>
