--- a/content/sluzby/index.html
+++ b/content/sluzby/index.html
@@ -4,6 +4,14 @@
   <title>Zpracovaný úkol</title>
   <script src="https://api.mapy.cz/loader.js"></script>
   <script>Loader.load()</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139334665-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-139334665-1');
+</script>
 </head>
 <body>
   <h2>Mapy.cz</h2>
